charts/freshrss/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freshrss
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: freshrss
  template:
    metadata:
      labels:
        app.kubernetes.io/name: freshrss
    spec:
      containers:
      - name: freshrss
        image: docker.io/freshrss/freshrss:1.30.1
        ports:
        - name: http
          containerPort: 8080
        volumeMounts:
        - name: freshrss-data
          mountPath: /var/www/FreshRSS/data
        - name: freshrss-extensions
          mountPath: /var/www/FreshRSS/extensions
        - name: postgres-cert
          mountPath: /pg
        - name: freshrss-config
          mountPath: /var/www/FreshRSS/data/config.custom.php
          subPath: config.custom.php
      volumes:
      - name: freshrss-data
        persistentVolumeClaim:
          claimName: freshrss-data
      - name: freshrss-extensions
        persistentVolumeClaim:
          claimName: freshrss-extensions
      - name: postgres-cert
        secret:
          secretName: postgres-freshrss
          defaultMode: 0640
      - name: freshrss-config
        configMap:
          name: freshrss-config
      securityContext:
        fsGroup: 33
