charts/freshrss/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: freshrss
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: freshrss
  ports:
  - name: http
    port: 80
    targetPort: http
